<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/bottom_sheet_filter_container">

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_sheet_filter_ages_margin_bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/editTextSearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/editTextMinAge"
                    style="@style/AgeFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/bottom_sheet_filter_margin"
                    android:layout_weight="1"
                    android:autofillHints="no"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/editTextMaxAge"
                    android:hint="@string/filter_age_min"
                    android:inputType="numberSigned"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editTextMaxAge"
                    style="@style/AgeFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/bottom_sheet_filter_margin"
                    android:layout_weight="1"
                    android:autofillHints="no"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/editTextSearch"
                    android:ems="10"
                    android:hint="@string/filter_age_max"
                    android:inputType="numberSigned"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_sheet_filter_search_margin_bottom"
                android:autofillHints="no"
                android:background="@drawable/playground_list_filter_search_background"
                android:drawableStart="@drawable/playground_list_filter_search"
                android:drawablePadding="@dimen/bottom_sheet_filter_search_drawable_padding"
                android:ems="10"
                android:hint="@string/filter_search_playground"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:padding="@dimen/bottom_sheet_filter_search_padding"
                app:layout_constraintBottom_toTopOf="@+id/buttonSearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>