<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/map_bottom_sheet_container_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/map_bottom_sheet_title_margin_end"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonFavorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="TextView" />

            <LinearLayout
                android:id="@+id/tileContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/playground_detail_tile_container_margin_top"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

                <TextView
                    android:id="@+id/textViewDetailMinAge"
                    style="@style/PlaygroundDetailTile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/playground_detail_tile_min_age_margin_end"
                    android:layout_weight="1"
                    tools:text="@string/detail_age" />

                <TextView
                    android:id="@+id/textViewDetailMaxAge"
                    style="@style/PlaygroundDetailTile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/playground_detail_tile_max_age_margin_horizontal"
                    android:layout_weight="1"
                    tools:text="@string/detail_games" />

                <TextView
                    android:id="@+id/textViewDetailSurface"
                    style="@style/PlaygroundDetailTile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/playground_detail_tile_surface_margin_start"
                    android:layout_weight="1"
                    tools:text="@string/detail_surface" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonItinerary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/playground_detail_tile_background"
                android:text="@string/detail_itinerary"
                android:layout_marginTop="@dimen/map_bottom_sheet_itinerary_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tileContainer" />

            <ImageButton
                android:id="@+id/imageButtonShare"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_send" />

            <ImageButton
                android:id="@+id/imageButtonFavorite"
                android:layout_width="@dimen/map_bottom_sheet_favorite_width"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerInside"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonShare"
                app:layout_constraintTop_toTopOf="@+id/textViewTitle"
                app:srcCompat="@drawable/ic_star" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
